--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ body, html {
 	width: 100% !important;
 	height: 100% !important;
 }
-h2, h3, h4 {
+h2, h3, h4, h6 {
 	font-family: 'Raleway', sans-serif;
 }
 h2 {
@@ -30,7 +30,12 @@ h4 {
 h5 {
 	text-transform: uppercase;
 	font-weight: 700;
-	line-height: 20px;
+	/*line-height: 20px;*/
+}
+h6 {
+	font-size: 18px;
+	color: rgb(249, 239, 255);
+	font-weight: 600;
 }
 p {
 	font-size: 15px;
@@ -157,8 +162,8 @@ hr {
 	font-family: 'Raleway', sans-serif;
 	text-transform: uppercase;
 	color: #fff;
-	background-color: #428ec3;
-	background-image: linear-gradient(to right, #428ec3 0%, #5ca9fb 100%);
+	background-color: #6900b1;
+    background-image: linear-gradient(to right, #540087 0%, #6900b1 100%);
 	padding: 14px 34px;
 	letter-spacing: 1px;
 	margin: 0;
@@ -171,7 +176,7 @@ hr {
 .btn-custom:hover, .btn-custom:focus, .btn-custom.focus, .btn-custom:active, .btn-custom.active {
 	color: #fff;
 	background-image: none;
-	background-color: #5ca9fb;
+	background-color: #8b00ed;
 }
 .btn:active, .btn.active {
 	background-image: none;
@@ -212,9 +217,11 @@ background: linear-gradient(90deg, rgba(19,19,19,1) 20%, rgba(47,47,47,1) 80%);
 	-moz-background-size: cover;
 	background-size: cover;
 	-o-background-size: cover;
+	height: 100%
 }
 .intro .overlay {
 	background: rgba(0,0,0,0.0);
+	height: 100%
 }
 .intro h1 {
 	font-family: 'Raleway', sans-serif;
@@ -241,6 +248,9 @@ header .intro-text {
 	padding-top: 25rem;
 	padding-bottom: 30rem;
 	text-align: center;
+}
+.css-cssveg {
+	height: 100%;
 }
 /* Features Section */
 #features {
@@ -769,6 +779,7 @@ color: #777;
 		text-transform: uppercase;
 		margin-top: 0;
 		margin-bottom: 10px;
+		height: 17rem;
 	}
 
 	#menu a.navbar-brand {
@@ -805,4 +816,81 @@ color: #777;
 		width: 100%;
 		padding-right: 0px;
 	}
+  }
+
+.mainCard{
+	display: flex;
+	position: relative;
+	height: 10%;
+  	min-width: 20% !important;
+	-webkit-box-shadow: 6px 6px 8px 0px #afafaf !important;
+	-moz-box-shadow: 6px 6px 8px 0px #afafaf;
+	box-shadow: 6px 6px 8px 0px #afafaf;
+	background-color: rgb(85, 31, 156);
+	border-radius: 10px;	
+  	text-align: center;
+}
+
+.timeline {
+	position: relative;
+	margin: 0 auto;
+	max-width: 600px;
+  }
+  
+  .timeline::before {
+	content: "";
+	position: absolute;
+	left: 50%;
+	top: 0;
+	bottom: 0;
+	width: 1px;
+	background-color: #000;
+	transform: translateX(-50%);
+  }
+  
+  .timeline-item {
+	position: relative;
+	margin-bottom: 100px;
+  }
+  
+  .timeline-year {
+	position: absolute;
+	left: 50%;
+	top: 0;
+	transform: translateX(-50%);
+	font-size: 24px;
+	font-weight: bold;
+	color: #000;
+  }
+  
+  .timeline-content {
+	margin-left: 70px;
+	overflow: hidden;
+	max-height: 0;
+	transform: translateY(50px) scale(0.9);
+  	opacity: 0;
+  	transition: transform 0.5s ease-out, opacity 0.5s ease-out;
+  }
+
+  .timeline-content-right {
+	margin-left: 70px;
+	overflow: hidden;
+	max-height: 0;
+	transform: translateY(50px) scale(0.9);
+  	opacity: 0;
+  	transition: transform 0.5s ease-out, opacity 0.5s ease-out;
+  }
+  
+  .timeline-item.active .timeline-content {
+	max-height: 1000px;
+	transform: translateY(0) scale(1);
+  	opacity: 1;
+  	transition: transform 0.5s ease-in, opacity 0.5s ease-in;
+  }
+
+  .timeline-item.active .timeline-content-right {
+	max-height: 120px;
+	transform: translateY(0) scale(1);
+  	opacity: 1;
+  	transition: transform 0.5s ease-in, opacity 0.5s ease-in;
   }
