--- a/public/css/style.css
+++ b/public/css/style.css
@@ -821,13 +821,15 @@ color: #777;
 .mainCard{
 	display: flex;
 	position: relative;
-	height: 10%;
-  	min-width: 20% !important;
+  	min-width: 150px !important;
+	min-height: 150px !important;
+	border-radius: 50%;	
 	-webkit-box-shadow: 6px 6px 8px 0px #afafaf !important;
 	-moz-box-shadow: 6px 6px 8px 0px #afafaf;
 	box-shadow: 6px 6px 8px 0px #afafaf;
 	background-color: rgb(85, 31, 156);
-	border-radius: 10px;	
+	align-items: center;
+  	justify-content: center;
   	text-align: center;
 }
 
@@ -850,11 +852,18 @@ color: #777;
   
   .timeline-item {
 	position: relative;
-	margin-bottom: 100px;
+	margin-bottom: 50px;
   }
   
   .timeline-year {
-	position: absolute;
+	overflow: hidden;
+	max-height: 0;
+	opacity: 0;
+	position: relative;
+	transform: translateY(50px) scale(0.9);
+	opacity: 0;
+	transition: transform 0.5s ease-out, opacity 0.5s ease-out;
+
 	left: 50%;
 	top: 0;
 	transform: translateX(-50%);
@@ -864,21 +873,19 @@ color: #777;
   }
   
   .timeline-content {
-	margin-left: 70px;
 	overflow: hidden;
 	max-height: 0;
 	transform: translateY(50px) scale(0.9);
   	opacity: 0;
   	transition: transform 0.5s ease-out, opacity 0.5s ease-out;
-  }
+	width: 45%;
+	margin-bottom: 10px;
 
-  .timeline-content-right {
-	margin-left: 70px;
-	overflow: hidden;
-	max-height: 0;
-	transform: translateY(50px) scale(0.9);
-  	opacity: 0;
-  	transition: transform 0.5s ease-out, opacity 0.5s ease-out;
+	-webkit-box-shadow: 6px 6px 8px 0px #afafaf !important;
+	-moz-box-shadow: 6px 6px 8px 0px #afafaf;
+	box-shadow: 6px 6px 8px 0px #afafaf;
+	border: 1px solid #f8f8f8;
+	border-radius: 10px;
   }
   
   .timeline-item.active .timeline-content {
@@ -888,9 +895,8 @@ color: #777;
   	transition: transform 0.5s ease-in, opacity 0.5s ease-in;
   }
 
-  .timeline-item.active .timeline-content-right {
-	max-height: 120px;
-	transform: translateY(0) scale(1);
-  	opacity: 1;
+  .timeline-item.active .timeline-year {
+	max-height: 170px;
+	opacity: 1;
   	transition: transform 0.5s ease-in, opacity 0.5s ease-in;
   }
